Fix high contrast override (report statuses)
Another override -- ugh, why is this selector so specific?

--- a/mastodonFlat.css
+++ b/mastodonFlat.css
@@ -94,6 +94,7 @@ body, .footer,
 .actions-modal ul li:not(:empty) a,
 .upload-progress,
 .report-modal__comment .setting-toggle__label,
+.report-modal__statuses .status__content p,
 .activity-stream .detailed-status.light .status-card__description
 {
     color: var(--text)
